syntax = "proto3";

package frontend;

import "protocol/protocol.proto";

option go_package = "github.com/dvid-messanger/protos/gen/frontend;frontendv1";

service Notifier {
  rpc NewMessage (NewMessageRequest) returns (NewMessageResponse);
  rpc NewChat (NewChatRequest) returns (NewChatResponse);
}

message NewMessageRequest {
  protocol.ChatMessage message = 1;
}

message NewMessageResponse {
}

message NewChatRequest {
  protocol.Chat chat = 1;
}

message NewChatResponse {

}